array.island.Island.scala.error
Erreur de compilation :
Island:6: error: type mismatch;
 found   : Int
 required: Array[Int]
    if (island(i) > max){
               ^Island:7: error: type mismatch;
 found   : Int
 required: Array[Int]
      max = island(i)
                   ^Island:8: error: type mismatch;
 found   : Int
 required: Array[Int]
      niveau = island(i)
                      ^Island:10: error: type mismatch;
 found   : Int
 required: Array[Int]
    if (island(i) == 0){
               ^Island:5: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 1 to num.length){
         ^